# otus_homework_2

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
src/app/: CMakeLists.txt  main.cpp
src/test_google/: CMakeLists.txt  test.cpp
